# firefly-iii-utils

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  README.md  import_csv.py  main.py  prek.toml  pyproject.toml  query.py
configs/: bilt_cc.json  bmo_harris_cc.json  cap1_cc.json  chase_cc.json  citi_cc.json  template_detection.json  wf_acct.json
src/firefly_iii_utils/: __init__.py  api.py  categorization.py  compare_guesses.py  csv_output.py  find_unmatched_transfers.py  guess_categories.py  import_categories.py  import_data.py  import_transactions.py  mappings.py  models.py  monthly_category_spend.py  output.py  parsing.py  paths.py  preprocessors.py  sum_budget_diffs.py
