[project]
name = "finances"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "prek>=0.4.4",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["B", "E501", "I", "SIM", "UP"]
