[project]
name = "firefly-iii-utils"
version = "0.1.0"
description = "Scripts for working with Firefly III."
readme = "README.md"
authors = [
    { name = "Patrick Creighton", email = "pcreighton429@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "github-copilot-sdk>=1.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[project.scripts]
firefly-iii-import-data = "firefly_iii_utils.import_data:main"
firefly-iii-guess-categories = "firefly_iii_utils.guess_categories:main"
firefly-iii-import-categories = "firefly_iii_utils.import_categories:main"
firefly-iii-find-unmatched-transfers = "firefly_iii_utils.find_unmatched_transfers:main"
firefly-iii-compare-guesses = "firefly_iii_utils.compare_guesses:main"
firefly-iii-sum-budget-diffs = "firefly_iii_utils.sum_budget_diffs:main"
firefly-iii-monthly-category-spend = "firefly_iii_utils.monthly_category_spend:main"

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "prek>=0.4.4",
    "ruff>=0.15.16",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["B", "E501", "I", "SIM", "UP"]
